fix font wrap

--- a/blocks/subscription/__price/subscription__price.css
+++ b/blocks/subscription/__price/subscription__price.css
@@ -3,4 +3,5 @@
   font-size: 1.8vh;
   line-height: 1.8vh;
   margin: 0 auto 1.8vh;
+  white-space: nowrap;
 }
